--- a/client/views/posts/post_item.html
+++ b/client/views/posts/post_item.html
@@ -6,7 +6,8 @@
 				<span>{{domain}}</span>
 			</h3>
 			<p>
-				submitted by {{author}}
+				submitted by {{author}},
+				<a href="{{pathFor 'postPage'}}">{{commentsCount}} comments</a>
 				{{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}
 			</p>
 		</div>
