--- a/client/views/inclides/header.html
+++ b/client/views/inclides/header.html
@@ -10,7 +10,12 @@
 			<div class="nav-collapse collapse">
 				<ul class="nav">
 					{{#if currentUser}}
-					<li><a href="{{pathFor 'postSubmit'}}">New submit post</a></li>
+  					<li>
+              <a href="{{pathFor 'postSubmit'}}">New submit post</a>
+            </li>
+            <li class="dropdown">
+              {{> notifications}}
+            </li>
 					{{/if}}
 				</ul>
 				<ul class="nav pull-right">
