--- a/client/views/inclides/header.html
+++ b/client/views/inclides/header.html
@@ -6,16 +6,22 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</a>
-			<a href="{{pathFor 'postsList'}}" class="brand">Microscope</a>
+			<a href="{{pathFor 'home'}}" class="brand">Microscope</a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
-					{{#if currentUser}}
-  					<li>
-              <a href="{{pathFor 'postSubmit'}}">New submit post</a>
-            </li>
-            <li class="dropdown">
-              {{> notifications}}
-            </li>
+                    <li>
+                        <a href="{{pathFor 'newPosts'}}">New</a>
+                    </li>
+                    <li>
+                        <a href="{{pathFor 'bestPosts'}}">Best</a>
+                    </li>
+                    {{#if currentUser}}
+                        <li>
+                          <a href="{{pathFor 'postSubmit'}}">New submit post</a>
+                        </li>
+                        <li class="dropdown">
+                          {{> notifications}}
+                        </li>
 					{{/if}}
 				</ul>
 				<ul class="nav pull-right">
