--- a/client/views/posts/post_item.html
+++ b/client/views/posts/post_item.html
@@ -1,5 +1,5 @@
 <template name="postItem">
-	<div class="post">
+	<div class="post" {{attributes}}>
         <a class="upvote btn {{upvotedClass}}" href="#">⬆</a>
 		<div class="post-content">
 			<h3>
