--- a/client/views/posts/posts_list.html
+++ b/client/views/posts/posts_list.html
@@ -1,15 +1,11 @@
 <template name="postsList">
 	<div class="posts">
-		{{#each posts}}
+		{{#each postsWithRank}}
 			{{> postItem}}
 		{{/each}}
 
         {{#if nextPath}}
             <a class="load-more" href="{{nextPath}}">Load more</a>
-        {{else}}
-            {{#unless ready}}
-                {{> spinner}}
-            {{/unless}}
         {{/if}}
 	</div>
 </template>
