Revert "add attr"
This reverts commit 64f3263eade6e76282d206bee9c85d998e75bcf5.

--- a/client/views/posts/post_item.html
+++ b/client/views/posts/post_item.html
@@ -1,5 +1,5 @@
 <template name="postItem">
-	<div class="post" {{attributes}}>
+	<div class="post">
         <a class="upvote btn {{upvotedClass}}" href="#">⬆</a>
 		<div class="post-content">
 			<h3>
