--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -34,9 +34,7 @@ body {
   /* For IE 6/7 (trigger hasLayout) */
   *zoom: 1;
   position: relative;
-  opacity: 1;
-    transition: all 300ms 0ms ease-in;
-}
+  opacity: 1; }
   .post:before, .post:after {
     content: "";
     display: table; }
